[package]
name = "pipa"
version = "0.4.0"
edition = "2021"
authors = ["Muhammad Fathir Irhas <mfathirirhas@gmail.com>"]
description = "Pipe Operator Library for Rust"
categories = ["development-tools"]
keywords = ["pipe", "pipe-operator", "fp", "macro", "functional"]
license = "MIT"
repository = "https://github.com/mfirhas/pipa"

[dependencies]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
